# Test1

./: CMakeLists.txt  CMakeLists.txt.user.173f3de  CMakeLists.txt.user.4203bb2  CMakeLists.txt.user.c27390e  README.md  dirtreemodel.cpp  dirtreemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
minizip/: mz_crypt.cpp  mz_crypt.h  mz_crypt_win32.cpp  mz_os.cpp  mz_os.h  mz_strm.h  mz_strm_buf.h  mz_strm_mem.h  mz_strm_os.h  mz_strm_split.h  mz_strm_wzaes.h  mz_zip.cpp  mz_zip.h  mz_zip_rw.cpp  mz_zip_rw.h  some_lib.cpp  some_lib.h
myLib/: filedirdata.cpp  filedirdata.h  filedirdata_posix.cpp  filedirdata_win32.cpp  onedirorfileclass.cpp  onedirorfileclass.h  rustextrecoderclass.cpp  rustextrecoderclass.h
